# storage/api-docs/api-docs.json
@@ -301,6 +301,123 @@
                 ]
             }
         },
+        "/api/v1/account/cards/assign_bulk": {
+            "post": {
+                "tags": [
+                    "Account Cards"
+                ],
+                "summary": "Assign multiple cards to a subaccount",
+                "description": "Assigns multiple cards to a subaccount",
+                "operationId": "19383a5dbe704fea8b520083007886c4",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "subaccount_id": {
+                                        "description": "Subaccount UUID",
+                                        "type": "string",
+                                        "example": "123456"
+                                    },
+                                    "cards": {
+                                        "description": "Array of card UUIDs",
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string",
+                                            "example": "123456"
+                                        }
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Cards assigned successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "cards": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "card_id": {
+                                                        "description": "Card UUID",
+                                                        "type": "string",
+                                                        "example": "123456"
+                                                    },
+                                                    "card_type": {
+                                                        "description": "Card Type",
+                                                        "type": "string",
+                                                        "example": "credit"
+                                                    },
+                                                    "brand": {
+                                                        "description": "Card Brand",
+                                                        "type": "string",
+                                                        "example": "master"
+                                                    },
+                                                    "masked_pan": {
+                                                        "description": "Masked Pan",
+                                                        "type": "string",
+                                                        "example": "1234xxxxxxxx9876"
+                                                    },
+                                                    "bin": {
+                                                        "description": "Card BIN",
+                                                        "type": "string",
+                                                        "example": "12345678"
+                                                    },
+                                                    "balance": {
+                                                        "description": "Card Balance",
+                                                        "type": "string",
+                                                        "example": "100.00"
+                                                    },
+                                                    "clabe": {
+                                                        "description": "Card CLABE",
+                                                        "type": "string",
+                                                        "example": "123456"
+                                                    },
+                                                    "status": {
+                                                        "description": "Card Status",
+                                                        "type": "string",
+                                                        "example": "active"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        },
+                                        "page": {
+                                            "description": "Current page",
+                                            "type": "integer",
+                                            "example": "1"
+                                        },
+                                        "total_pages": {
+                                            "description": "Total pages",
+                                            "type": "integer",
+                                            "example": "1"
+                                        },
+                                        "total_records": {
+                                            "description": "Total records",
+                                            "type": "integer",
+                                            "example": "1"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/account": {
             "get": {
                 "tags": [
@@ -3944,18 +4061,28 @@
                                                         "type": "string",
                                                         "example": "123456"
                                                     },
-                                                    "date": {
-                                                        "description": "Movement Date / Unix Timestamp",
-                                                        "type": "string",
-                                                        "example": "1716611739"
-                                                    },
                                                     "type": {
                                                         "description": "Movement Type",
                                                         "type": "string",
                                                         "example": "deposit"
                                                     },
+                                                    "description": {
+                                                        "description": "Movement Description",
+                                                        "type": "string",
+                                                        "example": "Deposit"
+                                                    },
+                                                    "reference": {
+                                                        "description": "Movement Reference",
+                                                        "type": "string",
+                                                        "example": "123456"
+                                                    },
                                                     "amount": {
                                                         "description": "Movement Amount",
+                                                        "type": "string",
+                                                        "example": "100.00"
+                                                    },
+                                                    "balance": {
+                                                        "description": "Movement Balance",
                                                         "type": "string",
                                                         "example": "100.00"
                                                     },
@@ -3964,10 +4091,25 @@
                                                         "type": "string",
                                                         "example": "123456"
                                                     },
-                                                    "description": {
-                                                        "description": "Movement Description",
+                                                    "date": {
+                                                        "description": "Movement Date / Unix Timestamp",
                                                         "type": "string",
-                                                        "example": "Deposit"
+                                                        "example": "1716611739"
+                                                    },
+                                                    "card": {
+                                                        "properties": {
+                                                            "card_id": {
+                                                                "description": "Card UUID",
+                                                                "type": "string",
+                                                                "example": "123456"
+                                                            },
+                                                            "bin": {
+                                                                "description": "Card BIN",
+                                                                "type": "string",
+                                                                "example": "123456"
+                                                            }
+                                                        },
+                                                        "type": "object"
                                                     }
                                                 },
                                                 "type": "object"
